# openweather.rs

./: Cargo.toml  Readme.md
src/: cli.rs  config.rs  lib.rs  main.rs  query.rs
