[package]
name = "openweather"
version = "0.1.0"
edition = "2021"
authors = ["LitiaEeloo <litiaeeloo@gmail.com>"]
description = "An openweather wrapper"
readme = "Readme.md"
homepage = "https://github.com/LighghtEeloo/openweather.rs"
repository = "https://github.com/LighghtEeloo/openweather.rs"
license = "MIT"
keywords = ["cli", "search", "weather", "openweather"]
categories = ["command-line-utilities"]

[dependencies]
# error handling
anyhow = "1.0"

# async
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["executor"] }

# logging
log = "0.4"
env_logger = "0.10"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"

# cli
clap = { version = "4.0", features = ["derive"] }

# path management
directories-next = "2.0"

# web
url = "2"
reqwest = { version = "0.11", features = ["json"] }

